--- a/src/pages/Settings/Settings.css
+++ b/src/pages/Settings/Settings.css
@@ -5,7 +5,7 @@
 
 .settings-left {
   width: 18rem;
-  padding: 1rem;
+  padding: 1.5rem 1rem;
   background: #fff;
   border-right: 1px solid #eee;
 }
@@ -38,4 +38,5 @@
   align-items: center;
   color: #6f7780;
   font-size: 1rem;
+  background-color: #f9fafb;
 }
