--- a/src/pages/SideBar/Sidebar.css
+++ b/src/pages/SideBar/Sidebar.css
@@ -80,14 +80,20 @@
 .sidebar-footer {
   color: #d9534f;
   cursor: pointer;
-  display: flex;
-  gap: 1rem;
-  padding: 1rem;
+  padding: 1rem 2rem 1rem 1rem;
   border-top: 2.5px solid #eee;
 }
 
-.sidebar-footer:hover{
-  background-color: #744544;
+.logout{
+
+  display: flex;  
+  gap: 1rem;
+  width: 100%;
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+.logout:hover{
+  background-color: #e72a2a10;
 }
 
 .sidebar.collapsed .sidebar-footer {
