--- a/src/pages/ChatWindow/Chat.css
+++ b/src/pages/ChatWindow/Chat.css
@@ -17,7 +17,6 @@
   width: 2.8rem;
   height: 2.8rem;
   border-radius: 50%;
-  object-fit: cover;
 }
 
 .chat-name {
@@ -61,8 +60,6 @@
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
-  max-width: 60%;
-  position: relative;
 }
 
 .msg.left {
@@ -96,16 +93,24 @@
 }
 
 .app-button.chat-send-btn {
-  width: auto;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  white-space: nowrap;
+  width: fit-content;
+  padding: 0.5rem;
 }
 
 .chat-input input {
-  width: 100%;
   padding: 0.9rem;
-  border: none;
   border-radius: 10px;
-  background: #f3f3f5;
+}
+
+.chat-input-icon {
+  cursor: pointer;
+}
+
+.chat-input-icon {
+  border-radius: 3px;
+  padding: 0.5rem;
+}
+
+.chat-input-icon:hover {
+  background-color: #e2e2e6ff;
 }
